--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    // "build": "NODE_ENV=production && nest build",
+    "build": "NODE_ENV=production && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start-default": "nest start",
     "start:dev": "nest start --watch",
